baked_fluent/tests/ui/03-macro-err.rs
use baked_fluent::impl_localize;

impl_localize! {
    #[localize(path = "whatever", default_locale = "bees", invalid_thing = "banana")]
    struct TestLocalizer(_);
}

fn main() {}
